# InsScreen_project

./: .gitignore  CHANGELOG.md  CMakeLists.txt  CODE_OF_CONDUCT.md  COMMERCIAL_LICENSE.md  CONTRIBUTING.md  COURSE_TABLE_README.md  ENGINEERING_DOCS.md  IMPLEMENTATION.md  LICENSE  NOTICE.md  README.md  RELEASE.md  ROADMAP.md  SECURITY.md  SUPPORT.md  partitions.csv  sdkconfig.defaults  timetable_example.json  v2.3.3优化改动说明.md  v2.3.4优化改动说明.md  v2.3.5_优化改动说明.md  使用说明书.md  公开发布检查清单.md  文档索引.md
docs/: aht20_sensor_flow.md  conversation_archive_project_structure_and_hardware_2026-07-10.md  fonts.md  gitee-about.md
hardware/: BOM.md  BOM_ACTUAL.md
main/: CMakeLists.txt  aht20.c  aht20.h  app_main.c  battery_mon.c  battery_mon.h  button.c  button.h  buzzer.c  buzzer.h  calendar_display.c  calendar_display.h  canvas_board.c  canvas_board.h  canvas_icons.h  clock_display.c  clock_display.h  codex_quota.c  codex_quota.h  countdown.c  countdown.h  device_identity.c  device_identity.h  diag_log.c  diag_log.h  display_mode.c  display_mode.h  display_policy.c  display_policy.h  epd.h  epd_stub.c  fb_render.c  fb_render.h  font_data.h  font_ext.c  font_ext.h  http_app.c  http_app.h  http_canvas.c  http_features.c  (+41 more)
release/: README.md
test/: README.md
test/lunar/: CMakeLists.txt
test/lunar/main/: CMakeLists.txt  test_lunar.c
tools/: check_public_docs.py  fetch_open_fonts.py  font_extra_chars.txt  gen_calendar_font.py  gen_city_excel.py  gen_ext_font.py  gen_font.py  preview_ext_font.py  update_gitee_about.ps1
web/: board.html  calendar.html  clock.html  codex.html  config.html  countdown.html  gallery.html  index.html  message.html  news.html  timetable.html  todo.html  weather.html
